Fix session rotation limits
