# packages/api/src/database/entities/app.entity.ts
@@ -1,5 +1,5 @@
-import { BaseEntity } from '@zyno-io/dk-server-foundation';
 import { entity, PrimaryKey, Unique, UUID } from '@deepkit/type';
+import { BaseEntity } from '@zyno-io/dk-server-foundation';
 
 @entity.name('apps')
 export class AppEntity extends BaseEntity {
@@ -10,6 +10,7 @@ export class AppEntity extends BaseEntity {
     apiKey?: string & Unique;
     isActive: boolean = true;
     maxIdleTimeout?: number;
+    maxSessionDuration?: number;
     createdAt!: Date;
     updatedAt!: Date;
 }
